--- a/package.json
+++ b/package.json
@@ -18,16 +18,23 @@
     "@mui/material": "^6.4.7",
     "ai": "^4.1.54",
     "axios": "^1.8.2",
+    "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "d3": "^7.9.0",
     "dotenv": "^16.4.7",
     "langchain": "^0.3.19",
     "next": "15.2.1",
     "openai": "^4.86.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
